# 3P22Lambda

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  config.h.in
source/: CMakeLists.txt  config.h.in  main.cpp  main.h
